<resources>
    <string name="app_name">ArtiFy</string>
    <string name="log_in">LOG IN</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="e_mail">E-mail</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Sign_up">Sign Up</string>
    <string name="phone_no">Phone No</string>
    <string name="sign_up_log_in">Log in</string>
    <string name="sign_up_register">Register</string>
    <string name="welcome_user">Welcome User!!!</string>
    <string name="enter_and_explore_art">Enter and Explore Art</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up_2">Sign Up</string>
    <string name="start_your_journey_with_artify">Start your journey with ArtiFy !!!</string>
    <string name="hello_admin">Hello Admin!</string>
    <string name="insert_art">Insert Art</string>
    <string name="manage_art">Manage Art</string>
    <string name="explore">Explore</string>
    <string name="insert_art_2">Insert Art</string>
    <string name="artwork_name">Artwork Name</string>
    <string name="artwork_price">Artwork Price</string>
    <string name="art_quantity">Art Quantity</string>
    <string name="select_image">Select Image</string>
    <string name="insert_art_3">Insert Art</string>
    <string name="to_delete_search_an_art_by_name">To Delete search an art by name</string>
    <string name="art_name">Art Name</string>
    <string name="art_price">Art Price</string>
    <string name="art_quantity_2">Art Quantity</string>
    <string name="art_id">Art ID</string>
    <string name="search">Search</string>
    <string name="delete_image">Delete Image</string>
    <string name="search_a_product_by_name_to_update">Search a product by name to update</string>
    <string name="art_name_2">Art Name</string>
    <string name="art_price_2">Art Price</string>
    <string name="art_quantity_3">Art Quantity</string>
    <string name="art_id_2">Art ID</string>
    <string name="select_image_2">Select Image</string>
    <string name="search_2">Search</string>
    <string name="update">Update</string>
    <string name="update_2">Update</string>
    <string name="delete_2">Delete</string>
    <string name="all_artworks">All Artworks</string>
</resources>