<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp">


    <TextView
        android:id="@+id/text_view_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_delete_search_an_art_by_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp" />


    <EditText
        android:id="@+id/text_view_art_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/art_name"
        android:layout_marginBottom="12dp"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/text_view_art_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/art_price"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:enabled="false" />


    <TextView
        android:id="@+id/text_view_art_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/art_quantity_2"
        android:inputType="number"
        android:padding="8dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:enabled="false" />


    <TextView
        android:id="@+id/text_view_art_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/art_id"
        android:padding="8dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/darker_gray"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:enabled="false" />


    <ImageView
        android:id="@+id/image_view_art"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="16dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:weightSum="2">

        <Button
            android:id="@+id/button_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:backgroundTint="#CD94D7"
            android:text="@string/search" />


        <Button
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/delete_image" />
    </LinearLayout>

</LinearLayout>