<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_tag_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/enter_and_explore_art"
        android:textColor="#570766"
        android:padding="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>

    <TextView
           android:id="@+id/tv_login_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text = "@string/log_in"
           android:textSize="30sp"
           android:textStyle="bold"
           android:textColor="#A29F9F"
           android:layout_marginBottom="16dp"
        />

    <EditText
           android:id="@+id/et_username"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/username"
           android:textColorHint="#7E7C7C"
           android:inputType="text"
           android:padding="12dp"
           android:layout_marginBottom="16dp"
           android:textColor="@android:color/black"
           android:background="@android:drawable/editbox_background"
           android:autofillHints="username"
        />
    <EditText
           android:id="@+id/et_password"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/password"
           android:textColorHint="#7E7C7C"
           android:inputType="textPassword"
           android:padding="12dp"
           android:layout_marginBottom="16dp"
           android:textColor="@android:color/black"
           android:background="@android:drawable/editbox_background"
           android:autofillHints="password"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            android:backgroundTint="#CD94D7"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/sign_up_2"
            android:layout_marginEnd="8dp"
            />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            android:backgroundTint="#CD94D7"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginStart="8dp"
            />
   </LinearLayout>

</LinearLayout>