<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".AdminHomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_admin"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="18dp"
        android:gravity="center">

    </TextView>

    <Button
        android:id="@+id/btn_insert_art"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:text="@string/insert_art"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="12dp"
        android:backgroundTint="#508D4E"
        android:layout_marginBottom="16dp">

    </Button>

    <Button
        android:id="@+id/btn_view_art"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:text="@string/manage_art"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:padding="12dp"
        android:backgroundTint="#1A5319"
        android:layout_marginBottom="16dp">

    </Button>



</LinearLayout>

